ruta /products implementada

--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -23,14 +23,16 @@ Description: A two-column fixed width template suitable for corporate use.
 	<div id="logo">
 		<h1><a href="/">AEV2 - Mateo Bosch</a></h1>
 		<h2>DWES</h2>
+		
 	</div>
+
 	<div id="menu">
 		<ul>
-			<li class="active"><a href="/">About Us</a></li>
-			<li><a href="/">Products</a></li>
+			<li><a href="/products">Productos</a></li>
 			<li><a href="/">Services</a></li>
 			<li><a href="/">Clients</a></li>
 			<li><a href="/">Support</a></li>
+			<li><button type="button" onclick="javascript:history.go(-1)">Volver</button></li>
 		</ul>
 	</div>
 </div>
@@ -40,9 +42,9 @@ Description: A two-column fixed width template suitable for corporate use.
 	</div>
 	<div style="clear: both;">&nbsp;</div>
 </div>
-<div id="footer">
+<div id="footer">	
 	<p id="legal">Copyright &copy; 2007 Old Architecture. All Rights Reserved. Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
-	<p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+	<p id="links"><button type="button" onclick="javascript:history.go(-1)">Volver</button> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p> 
 </div>
 <div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div></body>
 </html>
