--- a/src/templates/layout.html.twig
+++ b/src/templates/layout.html.twig
@@ -1,51 +1,7 @@
-<!DOCTYPE html>
-<!-- saved from url=(0085)https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-<title>Old Architecture by Free Css Templates</title>
-<meta name="keywords" content="">
-<meta name="description" content="">
-<link href="default.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-	<div id="header">
-		<div id="logo">
-			<h1>
-				<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">Old Architecture</a>
-			</h1>
-			<h2>
-				<a href="http://www.freecsstemplates.org/">By Free CSS Templates</a>
-			</h2>
-		</div>
-		<div id="menu">
-			<ul>
-				<li class="active">
-					<a href="https://www.floridaoberta.com/">About Us</a>
-				</li>
-				<li>
-					<a href="https://www.floridaoberta.com/">Products</a>
-				</li>
-				<li>
-					<a href="https://www.floridaoberta.com/">Services</a>
-				</li>
-				<li>
-					<a href="https://www.floridaoberta.com/clients">Clients</a>
-				</li>
-				<li>
-					<a href="https://www.floridaoberta.com/">Support</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div id="splash">
-		<p>
-			<em>“Quisque dictum integer nisl risus sagittis rutrum id congue and nibh.”</em>
-		</p>
-	</div>
-	<div id="page">
-			<div id="content">
-		<div id="form_container">
-			<form method="post" action="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html">
+{% extends "base.html.twig" %}
+	{% block content %}
+	<div id="form">
+		<form method="post" action="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html">
 				<div>
 					<h2>New Client</h2>
 				</div>
@@ -93,21 +49,21 @@
 				</label>
 				<div>
 					<select name="reprCod">
-													<option value="7369">S?NCHEZ</option>
-													<option value="7499">ARROYO</option>
-													<option value="7521">SALA</option>
-													<option value="7566">JIM?NEZ</option>
-													<option value="7654">MART?N</option>
-													<option value="7698">NEGRO</option>
-													<option value="7782">CEREZO</option>
-													<option value="7788">GIL</option>
-													<option value="7839">REY</option>
-													<option value="7844">TOVAR</option>
-													<option value="7876">ALONSO</option>
-													<option value="7900">JIMENO</option>
-													<option value="7902">FERN?NDEZ</option>
-													<option value="7934">MU?OZ</option>
-											</select>
+						<option value="7369">S?NCHEZ</option>
+						<option value="7499">ARROYO</option>
+						<option value="7521">SALA</option>
+						<option value="7566">JIM?NEZ</option>
+						<option value="7654">MART?N</option>
+						<option value="7698">NEGRO</option>
+						<option value="7782">CEREZO</option>
+						<option value="7788">GIL</option>
+						<option value="7839">REY</option>
+						<option value="7844">TOVAR</option>
+						<option value="7876">ALONSO</option>
+						<option value="7900">JIMENO</option>
+						<option value="7902">FERN?NDEZ</option>
+						<option value="7934">MU?OZ</option>
+					</select>
 				</div>
 
 				<label for="limiteCredito">Credit Limit</label>
@@ -123,43 +79,6 @@
 				<input type="submit" name="submit" value="Insert">
 		</form>
 	</div>
-</div>		<div id="sidebar">
-			<h2>News &amp; Updates</h2>
-			<ul>
-				<li>
-					<h3>
-						<span>May 31</span>
-						Lorem Ipsum Dolor</h3>
-					<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">In posuere eleifend odio quisque semper mattis wisi maecenas ligula…</a>
-				</li>
-				<li>
-					<h3>
-						<span>May 29</span>
-						Pellentesque Congue</h3>
-					<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">Donec leo, vivamus fermentum nibh in augue praesent a lacus…</a>
-				</li>
-				<li>
-					<h3>
-						<span>May 24</span>
-						Maecenas Vitae Orci</h3>
-					<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">Quisque dictum integer nisl risus sagittis convallis rutrum id congue…</a>
-				</li>
-			</ul>
-		</div>
-		<div style="clear: both;">&nbsp;</div>
-	</div>
-	<div id="footer">
-		<p id="legal">Copyright © 2007 Old Architecture. All Rights Reserved. Designed by
-			<a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
-		<p id="links">
-			<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">Privacy Policy</a>
-			|
-			<a href="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html#">Terms of Use</a>
-		</p>
-	</div>
-	<div align="center">This template  downloaded form
-		<a href="http://all-free-download.com/free-website-templates/">free website templates</a>
-	</div>
-
-
-</body></html>
+	{% endblock %}
+			
+	
