--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -29,7 +29,7 @@ Description: A two-column fixed width template suitable for corporate use.
 	<div id="menu">
 		<ul>
 			<li><a href="/products">Productos</a></li>
-			<li><a href="/">Services</a></li>
+			<li><a href="/wharehouses">Almacenes</a></li>
 			<li><a href="/">Clients</a></li>
 			<li><a href="/">Support</a></li>
 			<li><button type="button" onclick="javascript:history.go(-1)">Volver</button></li>
