--- a/src/templates/list.html.twig
+++ b/src/templates/list.html.twig
@@ -1,27 +1,50 @@
 {% extends "base.html.twig" %}
 {% block content %}
     <h2>{{list_tittle}}</h2>
-    {% block table %}
-    <table>
-        <tbody>
-        {% for result in results %}
+    {% if table_for == "productos" %}
+    <table border=1 frame=void rules=rows>
+        <thead>
         <tr>
             <td style="color:#666699;">Descripcion</td>
             <td style="color:#666699;">Almacen</td>
             <td style="color:#666699;">Unidad</td>
             <td style="color:#666699;">Clasificacion</td>
-            <td style="color:#666699;">Precio por unidad</td>
+            <td style="color:#666699;">Precio por Unidad</td>
         </tr>
+        </thead>
+        <tbody>
+        {% for result in results %}
         <tr>
-            <td>{{result.getDescripcion}}</td>
-            <td>{{result.getNombreAlmacen.getNombre}}</td>
-            <td>{{result.getUnidad}}</td>
+            <td>{{result.getDescripcion|capitalize}}</td>
+            <td>{{result.getNombreAlmacen.getNombre|capitalize}}</td>
+            <td>{{result.getUnidad|capitalize}}</td>
             <td>{{result.getClasificacion}}</td>
-            <td>{{result.getPrecioUnidad}}</td>
+            <td>{{result.getPrecioUnidad|number_format(2, ',', '.')}} €</td>    
         </tr>
         {% endfor %}
         </tbody>
     </table>
-    {% endblock %}
+    {% endif %}
+    {% if table_for == "almacenes" %}
+    <table border=1 frame=void rules=rows>
+        <thead>
+        <tr>
+            <td style="color:#666699;">Nombre</td>
+            <td style="color:#666699;">Localizacion</td>
+            <td style="color:#666699;">Descripcion</td>
+        </tr>
+        </thead>
+        <tbody >
+        {% for result in results %}
+        <tr>
+            <td>{{result.getNombre|capitalize}}</td>
+            <td>{{result.getLocalizacionAlmacen|capitalize}}</td>
+            <td>{{result.getDescripcionAlmacen|capitalize}}</td>    
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    {% endif %}
+    
     
 {% endblock %}
