punto 9.4 (/business) implementado

--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -30,7 +30,7 @@ Description: A two-column fixed width template suitable for corporate use.
 		<ul>
 			<li><a href="/products">Productos</a></li>
 			<li><a href="/wharehouses">Almacenes</a></li>
-			<li><a href="/">Clients</a></li>
+			<li><a href="/business">Empresas</a></li>
 			<li><a href="/">Support</a></li>
 			<li><button type="button" onclick="javascript:history.go(-1)">Volver</button></li>
 		</ul>
