--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -16,7 +16,7 @@ Description: A two-column fixed width template suitable for corporate use.
 <title>AEV2-Mateo Bosch</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="stylesheet" type="text/css" />
+<link href="/default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="header">
@@ -31,7 +31,8 @@ Description: A two-column fixed width template suitable for corporate use.
 			<li><a href="/products">Productos</a></li>
 			<li><a href="/wharehouses">Almacenes</a></li>
 			<li><a href="/business">Empresas</a></li>
-			<li><a href="/">Support</a></li>
+			<li><a href="/orders">Pedidos</a></li>
+			<li><a href="/invoices">Facturas</a></li>
 			<li><button type="button" onclick="javascript:history.go(-1)">Volver</button></li>
 		</ul>
 	</div>
