--- a/src/templates/list.html.twig
+++ b/src/templates/list.html.twig
@@ -57,6 +57,7 @@
             <td style="color:#666699;">Nombre</td>
             <td style="color:#666699;">CIF</td>
             <td style="color:#666699;">Tipo</td>
+            <td style="color:#666699;" colspan="2">Acciones</td>
         </tr>
         </thead>
         <tbody>
@@ -66,13 +67,13 @@
             <td>{{result.getNombre|capitalize}}</td>
             <td>{{result.getCif}}</td>
             <td>{% if result.getTipo == 0 %}Proveedor{% endif %}{% if result.getTipo == 1 %}Cliente{% endif %}</td>
+            <td><button type="button" style="background-color:#666699;"><a href="/update/{{result.getId}}">Update</a></button></td>
             <td><button type="button" style="background-color:#666699;"><a href="/delete/{{result.getId}}">Borrar</a></button></td>
-
         </tr>
         {% endfor %}
         </tbody>
     </table>
-    <button type="button" style="background-color:#666699;"><a href="/update">Update</a></button>
+    
     {% endif %}
     
 {% endblock %}
