--- a/src/templates/layout.html.twig
+++ b/src/templates/layout.html.twig
@@ -1,82 +1,30 @@
 {% extends "base.html.twig" %}
 	{% block content %}
 	<div id="form">
-		<form method="post" action="https://www.floridaoberta.com/pluginfile.php/974320/mod_resource/content/37/form.html">
+		<form method="post" action="{{action}}">
 				<div>
-					<h2>New Client</h2>
+					<h2>{{form_name}}</h2>
 				</div>
-				<label for="clienteCod">Client Code</label>
+				<label for="nombre">Nombre</label>
 				<div>
-					<input name="clienteCod" type="number" size="5" value="">
-				</div>
-
-				<label for="Nombre">Name</label>
-				<div>
-					<input name="nombre" type="text" maxlength="45" size="45" value="">
+					<input name="nombre" type="text" value="{{nombre_value}}">
 				</div>
 
-				<label for="direc">Address</label>
+				<label for="cif">CIF</label>
 				<div>
-					<input name="direc" type="text" maxlength="40" size="40" value="">
+					<input name="cif" type="text" value="{{cif_value}}">
 				</div>
 
-				<label for="ciudad">City</label>
-				<div>
-					<input name="ciudad" type="text" maxlength="30" size="30" value="">
-				</div>
-
-				<label for="estado">State</label>
-				<div>
-					<input name="estado" type="text" maxlength="2" size="2" value="">
-				</div>
-
-				<label for="codPostal">ZIP Code</label>
-				<div>
-					<input name="codPostal" type="text" maxlength="9" size="9" value="">
-				</div>
-
-				<label for="area">Area</label>
-				<div>
-					<input name="area" type="number" maxlength="5" size="5" value="">
-				</div>
-
-				<label for="telefono">Telephone</label>
-				<div>
-					<input name="telefono" type="text" maxlength="9" size="9" value="">
-				</div>
-
-				<label for="reprCod">Contact
+				<label for="tipo">Tipo
 				</label>
 				<div>
-					<select name="reprCod">
-						<option value="7369">S?NCHEZ</option>
-						<option value="7499">ARROYO</option>
-						<option value="7521">SALA</option>
-						<option value="7566">JIM?NEZ</option>
-						<option value="7654">MART?N</option>
-						<option value="7698">NEGRO</option>
-						<option value="7782">CEREZO</option>
-						<option value="7788">GIL</option>
-						<option value="7839">REY</option>
-						<option value="7844">TOVAR</option>
-						<option value="7876">ALONSO</option>
-						<option value="7900">JIMENO</option>
-						<option value="7902">FERN?NDEZ</option>
-						<option value="7934">MU?OZ</option>
+					<select name="tipo">
+						<option value="0" {{proveedor_selected}}>Proveedor</option>
+						<option value="1" {{cliente_selected}}>Cliente</option>
 					</select>
 				</div>
-
-				<label for="limiteCredito">Credit Limit</label>
-				<div>
-					<input name="limiteCredito" type="number" max="9999999.99" min="0" step=".01" value="">
-				</div>
-
-				<label for="observaciones">Comments</label>
-				<div>
-					<textarea name="observaciones" cols="50" rows="5"></textarea>
-				</div>
-
-				<input type="submit" name="submit" value="Insert">
+				<br>
+				<input type="submit" name="submit" value="{{value_submit}}">
 		</form>
 	</div>
 	{% endblock %}
