--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -39,7 +39,8 @@ Description: A two-column fixed width template suitable for corporate use.
 </div>
 <div id="page">
 	<div id="content">
-	{% block content %}{% endblock %}
+	{% block content %}
+	{% endblock %}
 	</div>
 	<div style="clear: both;">&nbsp;</div>
 </div>
