--- a/src/templates/layout.html.twig
+++ b/src/templates/layout.html.twig
@@ -5,20 +5,21 @@
 				<div>
 					<h2>{{form_name}}</h2>
 				</div>
+				<input name='id' type="hidden" id="id" value="{{id_value}}">
 				<label for="nombre">Nombre</label>
 				<div>
-					<input name="nombre" type="text" value="{{nombre_value}}">
+					<input name="nombre" type="text" id="nombre" value="{{nombre_value}}">
 				</div>
 
 				<label for="cif">CIF</label>
 				<div>
-					<input name="cif" type="text" value="{{cif_value}}">
+					<input name="cif" type="text" id="cif" value="{{cif_value}}">
 				</div>
 
 				<label for="tipo">Tipo
 				</label>
 				<div>
-					<select name="tipo">
+					<select name="tipo" id="tipo">
 						<option value="0" {{proveedor_selected}}>Proveedor</option>
 						<option value="1" {{cliente_selected}}>Cliente</option>
 					</select>
